--- a/Reversi/Reversi.Logic.csproj
+++ b/Reversi/Reversi.Logic.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CSharpFunctionalExtensions" Version="2.27.0" />
+  </ItemGroup>
+
 </Project>
