--- a/Reversi.UnitTests/Reversi.UnitTests.csproj
+++ b/Reversi.UnitTests/Reversi.UnitTests.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Reversi.App\Reversi.App.csproj" />
     <ProjectReference Include="..\Reversi\Reversi.Logic.csproj" />
   </ItemGroup>
 
