--- a/Reversi.Web/Reversi.Web.csproj
+++ b/Reversi.Web/Reversi.Web.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Reversi\Reversi.Logic.csproj" />
+  </ItemGroup>
+
 </Project>
