--- a/Reversi.Web/Reversi.Web.csproj
+++ b/Reversi.Web/Reversi.Web.csproj
@@ -5,15 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NewFolder\**" />
+    <Content Remove="NewFolder\**" />
+    <EmbeddedResource Remove="NewFolder\**" />
+    <None Remove="NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.16" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Reversi\Reversi.Logic.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="NewFolder\" />
+    <ProjectReference Include="..\Reversi.Services\Reversi.Services.csproj" />
   </ItemGroup>
 
 </Project>
