--- a/Reversi/Reversi.Logic.csproj
+++ b/Reversi/Reversi.Logic.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="CSharpFunctionalExtensions" Version="2.27.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Converters\" />
+  </ItemGroup>
+
 </Project>
