Rename Reversi.App and Reversi.Web to Reversi.ConsoleApp and Reversi.WebApp

--- a/Reversi.UnitTests/Reversi.UnitTests.csproj
+++ b/Reversi.UnitTests/Reversi.UnitTests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Reversi.App\Reversi.App.csproj" />
+    <ProjectReference Include="..\Reversi.App\Reversi.ConsoleApp.csproj" />
     <ProjectReference Include="..\Reversi\Reversi.Logic.csproj" />
   </ItemGroup>
 
